Fix some spacing styles

--- a/src/collection-preferences/content-display/content-display-option.scss
+++ b/src/collection-preferences/content-display/content-display-option.scss
@@ -15,7 +15,7 @@
   display: flex;
   align-items: flex-start;
   padding-block: awsui.$space-scaled-xs;
-  padding-inline: awsui.$space-xs;
+  padding-inline-end: awsui.$space-xs;
   border-start-start-radius: awsui.$border-radius-item;
   border-start-end-radius: awsui.$border-radius-item;
   border-end-start-radius: awsui.$border-radius-item;
